     documentation non present imports from DESCRIPTIO are appended. Previously
     they replaced content.
  * while building source packages to binary form neither documentation is
     rebuilded nor imports validity testing is performed.
     e.g. withr source package does not have all requirements to build documentation.
  * updating of PACKAGES.rds fixed while uploading to S3 repository.

VERSION 0.16 (2017-11-08)
  * Project zip can be created for projects without master scripts.
  * prj_pack function added to export project sources. It is usefull for building
     project in docker and for giving project sources your peers to play with it.

VERSION 0.15 (2017-11-04)
  * Creation of PKGZIP with dependencies and filtering against packages existing
     in passed repository.
  * Uploading packages into repository together with dependencies and filtering
     against existing packages present in it.

VERSION 0.14 (2017-10-30)
  * Handling of multiple Dir repositories in project fixed.

VERSION 0.13 (2017-10-23)
  * #146: After installing package it is checked if it was built for proper
     R version. MRAN has packages built under 3.3.2 presented as built for 3.4.
  * Failure of building documentation for package is considered major error as
     roxygen also builds NAMESPACE file which is responsible for project exports
     and imports. Failure to properly declare NAMESPACE will make package unusable.
  * Detection if post documentation build imports in package DESCRIPTION file and
     NAMESPACE file are consistent. NAMESPACE is updated if has some packages
     declared in DESCRIPTION missing.

VERSION 0.12 (2017-10-16)
  * RStudio basic integration implemented. Dependency to rstudioapi added.
  * sbox folder added beside deployment/libs for libraries installed by the user.
  * #147: Building package documentation for unpriviledged user fixed.
  * #141: prj_zip does not require project to be under version control. Version