@@ -22,7 +22,7 @@ fi
 for rver in 3.2 3.3 3.4; do 
     echo "Building wlog/rsuite:${plat}_r${rver}_v${rsuite_ver} ..."
     docker rmi -f wlog/rsuite:${plat}_r${rver}_v${rsuite_ver} > /dev/nul 2>&1
-    docker build -t wlog/rsuite:${plat}_r${rver}_v${rsuite_ver} -f Dockerfile.${plat}_rsuite . --build-arg rver=$rver --build-arg rsuite_ver=$rsuite_ver
+    docker build -t wlog/rsuite:${plat}_r${rver}_v${rsuite_ver} -f Dockerfile.${plat}_rsuite . --build-arg rver=$rver --build-arg rsuite_ver=$rsuite_ver --no-cache
     if [ "$?" != "0" ]; then echo "Failed to build centos v${rsuite_ver} (R$rver) for ${plat}"; exit 1; fi
     
     echo "... pushing wlog/rsuite:${plat}_r${rver}_v${rsuite_ver} ..."
